--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 <body>
 
     <div id="call-screen">
-        <!-- You might want to set the background image via CSS -->
+        <div class="background-image" style="background-image: url('https://huggingface.co/spaces/CBer35/asd/resolve/main/john_pork_sin_texto.png?download=true');"></div>
         <div class="caller-info">
-            <p class="caller-name">John Pork</p>
-            <p class="calling-status">Is calling...</p>
+            <p class="caller-name">Alant</p>
+            <p class="calling-status">Te está llamando</p>
         </div>
         <div class="call-actions">
             <button id="decline-button" class="call-button decline">
-                Decline
+                Rechazar
             </button>
             <button id="accept-button" class="call-button accept">
-                Accept
+                Contestar
             </button>
         </div>
     </div>
 
     <div id="content" class="hidden">
-        <!-- Jumpscare and video elements will go here -->
+        <!-- Jumpscare element -->
         <img id="jumpscare-image" src="https://huggingface.co/spaces/CBer35/asd/resolve/main/walidterrorifico.png?download=true" alt="Jumpscare" class="hidden">
-        <video id="loop-video" src="https://huggingface.co/spaces/CBer35/asd/resolve/main/chihuahua%20ricroll.mp4?download=true" loop class="hidden"></video>
+        <!-- Video element removed -->
     </div>
 
     <script src="main.js"></script>
