--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="call-screen">
         <div class="background-image" style="background-image: url('https://huggingface.co/spaces/CBer35/asd/resolve/main/john_pork_sin_texto.png?download=true');"></div>
         <div class="caller-info">
-            <p class="caller-name">Alant</p>
+            <p class="caller-name">El papa Francisco</p>
             <p class="calling-status">Te está llamando</p>
         </div>
         <div class="call-actions">
